--- a/link.html
+++ b/link.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Contact</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -24,10 +24,10 @@
                     <a class="nav-link " href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="./link.html">Links</a>
+                    <a class="nav-link active" href="./link.html">Links</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./contact.html">Contact</a>
+                    <a class="nav-link " href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -41,10 +41,14 @@
 
                     <h4 class=" mb-3">Contact Form</h4>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>Work Email:</strong> william.o'connell@wearecodenation.com
+                        <li class="list-group-item"><strong>Github:</strong>
+                            <a href="https://github.com/seriouswill">Repository list.</a>
+                        <li class="list-group-item"><strong>Twitter:</strong> <a
+                                href="https://twitter.com/intent/tweet?button_hashtag=seriouswill&ref_src=twsrc%5Etfw"
+                                class="twitter-hashtag-button" data-show-count="false">Tweet #seriouswill</a>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </li>
-                        <li class="list-group-item"><strong>Email:</strong> williamjamesoc@gmail.com</li>
-                        <li class="list-group-item"><strong>Mobile:</strong> 07825481140</li>
+
                     </ul>
                 </div>
             </div>
