--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Links</a>
+                    <a class="nav-link" href="./link.html">Links</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contact.html">Contact</a>
