--- a/about.html
+++ b/about.html
@@ -33,6 +33,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="https://twitter.com/SeriousWill" data-size="large">
+                        Follow </a>
+                </li>
             </ul>
         </nav>
     </div>
