--- a/link.html
+++ b/link.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="./twitter.js"></script>
     <!-- BOOTSTRAP LINK -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Links</title>
 </head>
 
 <body>
@@ -33,41 +34,58 @@
         </nav>
     </div>
 
-    <div class="col">
-        <div class="card">
-            <h3 class="m-3">Contact Me</h3>
-            <div class="card">
-                <div class="card-body">
-
-                    <h4 class=" mb-3">Contact Form</h4>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>Github:</strong>
-                            <a href="https://github.com/seriouswill">Repository list.</a>
-                        <li class="list-group-item"><strong>Twitter:</strong> <a
-                                href="https://twitter.com/intent/tweet?button_hashtag=seriouswill&ref_src=twsrc%5Etfw"
-                                class="twitter-hashtag-button" data-show-count="false">Tweet #seriouswill</a>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <h3 class="m-3">Twitter</h3>
+                    <div class="card-body">
+                        <h4 class="mb-3">Tweets 🐦</h4>
+                        <div class="twitter">
+                            <a class="twitter-timeline"
+                                href="https://twitter.com/SeriousWill?ref_src=twsrc%5Etfw">Tweets by SeriousWill </a>
                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </li>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="m-3">Github</h3>
+                        <div class="card-body">
+                            <h4 class="mb-3">Links!😋</h4>
+                            <a href="https://github.com/seriouswill/">Github Repository</a>
 
-                    </ul>
-                </div>
-            </div>
 
-        </div>
-    </div>
-    </div>
-    </div>
 
-    <!-- BOOTSTRAP STUFF -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+
+                        </div>
+                        <div class="card">
+                            <h3 class="m-3">Spotlight </h3>
+                            <div class="card-body">
+                                <h4 class="mb-3">Spotlight Directory 👨‍🎤</h4>
+                                <a href="https://www.spotlight.com/1691-0163-7485">Spotlight Profile</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="m-3">Writing</h3>
+                        <div class="card-body">
+                            <h4 class="mb-3">Pieces and plays!🃏</h4>
+                            <a href="./writing.html">Writing</a>
+
+
+
+
+                        </div>
+
+                        <!-- BOOTSTRAP STUFF -->
+                        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                            crossorigin="anonymous"></script>
+                        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+                            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                            crossorigin="anonymous"></script>
+                        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+                            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+                            crossorigin="anonymous"></script>
 </body>
 
 </html>
