--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="container  my-5">
         <h1>Will's Portfolio</h1>
         <p class="lead">Enjoys Development and Disc Golf!</p>
+        <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
+            Follow @SeriousWill</a>
     </div>
 
     <div class="container">
@@ -41,7 +43,7 @@
         <div class="row">
             <div class="col">
                 <div class="card">
-                    <h3 class="m-3">My Background</h3>
+                    <h3 class="m-3">My Tech</h3>
                     <div class="card-body">
                         <h4 class="mb-3">JavaScript</h4>
                         <p>I began my life as a beginner developer learning <strong>javaScript</strong>, and even though
