--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./writing.html">Writing</a>
+                </li>
             </ul>
         </nav>
     </div>
