--- a/link.html
+++ b/link.html
@@ -19,16 +19,19 @@
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
-                    <a class="nav-link " href="./index.html">Home</a>
+                    <a class="nav-link active" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./link.html">Links</a>
+                    <a class="nav-link" href="./link.html">Links</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="./contact.html">Contact</a>
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./writing.html">Writing</a>
                 </li>
             </ul>
         </nav>
