3rd with funky background

--- a/writing.html
+++ b/writing.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
+    <script defer src="./canvas.js"></script>
     <!-- BOOTSTRAP LINK -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -24,7 +26,7 @@
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./index.html">Home</a>
+                    <a class="nav-link " href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./about.html">About</a>
@@ -36,7 +38,7 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./writing.html">Writing</a>
+                    <a class="nav-link active" href="./writing.html">Writing</a>
                 </li>
             </ul>
         </nav>
