--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <!-- BOOTSTRAP LINK -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./index.css">
+    <script defer src="./canvas.js"></script>
     <title>Portfolio</title>
 </head>
 
 <body>
+
     <div class="container  my-5">
         <h1>Will's Portfolio</h1>
         <p class="lead">Enjoys Development and Disc Golf!</p>
@@ -128,6 +130,7 @@
         </div>
     </div>
 
+
     <!-- BOOTSTRAP STUFF -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -137,7 +140,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script><canvas id='canvas1'></canvas>
 </body>
 
 </html>
