--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
 </head>
 
 <body>
+    <div class="container mt-3">
+        <div class="card">
+            <div class="container my-3">
+                <div class="col mt-3">
 
-    <div class="container  my-5">
-        <h1>Will's Portfolio</h1>
-        <p class="lead">Enjoys Development and Disc Golf!</p>
-        <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
-            Follow @SeriousWill</a>
+
+                    <h1>Will's Portfolio</h1>
+                    <p class="lead">Enjoys Development and Disc Golf!</p>
+                    <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
+                        Follow @SeriousWill</a>
+                </div>
+            </div>
+
+        </div>
     </div>
-
-    <div class="container">
+    </div>
+    <div class="container mt-2">
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
@@ -42,6 +50,7 @@
                 </li>
             </ul>
         </nav>
+    </div>
     </div>
 
     <div class="container mt-5">
