--- a/link.html
+++ b/link.html
@@ -17,17 +17,17 @@
 
 <body>
 
-    <div class="container">
+    <div class="container mt-3">
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./index.html">Home</a>
+                    <a class="nav-link " href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./link.html">Links</a>
+                    <a class="nav-link active" href="./link.html">Links</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contact.html">Contact</a>
