--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="card">
                 <div class="card-body">
 
-                    <h4 class=" mb-3">Contact Form</h4>
+                    <h4 class=" mb-3">Contact</h4>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>Work Email:</strong> william.o'connell@wearecodenation.com
                         </li>
@@ -54,6 +54,23 @@
 
         </div>
     </div>
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
     </div>
     </div>
 
