--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p>I began my life as a beginner developer learning <strong>javaScript</strong>, and even though
                             I have to code in Python daily, I don't let up on my Javascript skills.</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><a href="./game.html">Text-Based Adventure game!</a> </li>
+                            <li class="list-group-item"><a href="./games/game.html">Text-Based Adventure game!</a> </li>
                             <li class="list-group-item"><a href="https://github.com/seriouswill/weather-APP"> Weather
                                     App</a></li>
                             <li class="list-group-item"><a href="https://github.com/seriouswill/BLOGWRAITH">Metal
