--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="https://twitter.com/SeriousWill" data-size="large">
-                        Follow </a>
+                    <a class="nav-link" href="./writing.html" data-size="large">
+                        Writing </a>
                 </li>
             </ul>
         </nav>
@@ -50,7 +50,8 @@
                     <h3 class="m-3">My Background</h3>
                     <div class="card-body">
                         <h4 class="mb-3">Theatre</h4>
-                        <p>I trained as an actor, beginning in 2011, and worked in the industry for over 10 years. I had
+                        <p>I am a <strong>Classically Trained Actor</strong>, beginning in 2011, and worked in the
+                            industry for over 10 years. I had
                             always had a passion for computers though so during lockdown v.1 I decided to take the
                             plunge and begin my journey.</p>
                         <ul class="list-group list-group-flush">
@@ -129,6 +130,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    </script><canvas id='canvas1'></canvas>
 </body>
 
 </html>
