--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <!-- BOOTSTRAP LINK -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./index.css">
+    <script defer src="./canvas.js"></script>
     <title>Contact</title>
 </head>
 
@@ -18,7 +19,7 @@
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./index.html">Home</a>
+                    <a class="nav-link " href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./about.html">About</a>
@@ -27,7 +28,7 @@
                     <a class="nav-link" href="./link.html">Links</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
+                    <a class="nav-link active" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./writing.html">Writing</a>
@@ -54,24 +55,25 @@
 
         </div>
     </div>
-    <form>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <div class="col">
+        <div class="card">
+            <h3 class="m-3">Send me a message!</h3>
+            <div class="card">
+                <div class="card-body">
+                    <form action=”mailto:williamjamesoc@gmail.com” method=”POST” enctype=”multipart/form-data”
+                        name=”EmailForm”>
+                        <strong>Name:</strong><input class="list-group-item" type=”text” size=”19″ name=”ContactName”>
+                        <strong>Message:</strong><textarea class="list-group-item" name=”ContactCommentt” rows=”6″
+                            cols=”20″></textarea>
+                        <!-- <input class="list-group-item" type=”submit” value=”Submit”> -->
+                        <button class="list-group-item" type="submit" value="Submit">Send</button>
+
+                    </form>
+                </div>
+            </div>
+
+
         </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    </div>
     </div>
 
     <!-- BOOTSTRAP STUFF -->
@@ -84,7 +86,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    </script><canvas id='canvas1'></canvas>
+    </script>
+    <canvas id='canvas1'></canvas>
 </body>
 
 </html>
