--- a/games/whackamole/index.html
+++ b/games/whackamole/index.html
@@ -12,27 +12,27 @@
 <body>
     <div class="wrapper">
         <div class="score">0</div>
-        <div class="countdown">countdown</div>
-        <button class="startButton"></button>
+        <div class="countdown"></div>
+        <button class="startButton">Start!</button>
 
         <div class="game">
             <div class="hole hole1">
-                <div class="mole small"></div>
+                <div class="mole" id="small"></div>
             </div>
             <div class="hole hole2">
-                <div class="mole small"></div>
+                <div class="mole" id="small"></div>
             </div>
             <div class="hole hole3">
-                <div class="mole small"></div>
+                <div class="mole" id="small"></div>
             </div>
             <div class="hole hole4">
-                <div class="mole large"></div>
+                <div class="mole" id="large"></div>
             </div>
             <div class="hole hole5">
-                <div class="mole large"></div>
+                <div class="mole" id="large"></div>
             </div>
             <div class="hole hole6">
-                <div class="mole large"></div>
+                <div class="mole" id="large"></div>
             </div>
         </div>
     </div>
