added my new jquery site

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                             I have to code in Python daily, I don't let up on my Javascript skills.</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item"><a href="./games/game.html">Text-Based Adventure game!</a> </li>
-                            <li class="list-group-item"><a href="https://github.com/seriouswill/weather-APP"> Weather
-                                    App</a></li>
+                            <li class="list-group-item"><a href="https://seriouswill.github.io/githubsearcher/"> GitHub Scraper made in JS and jQuery</a></li>
                             <li class="list-group-item"><a href="https://github.com/seriouswill/BLOGWRAITH">Metal
                                     Blog</a></li>
                         </ul>
