--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./writing.html">Writing</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./games/exploder/index.html">Wanna explode stuff?</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -65,8 +68,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item"><a href="./games/game.html">Text-Based Adventure game!</a> </li>
                             <li class="list-group-item"><a href="https://seriouswill.github.io/githubsearcher/"> GitHub Scraper made in JS and jQuery</a></li>
-                            <li class="list-group-item"><a href="https://github.com/seriouswill/BLOGWRAITH">Metal
-                                    Blog</a></li>
+                            <li class="list-group-item"><a href="https://seriouswill.github.io/exploder/">Exploding fun</a></li>
                         </ul>
                         <h4 class="mb-3">Pygame</h4>
                         <strong>In the python front end module Pygame</strong> I have developed <a>a series of
