added movie searcher

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                             <li class="list-group-item"><a href="./games/game.html">Text-Based Adventure game!</a> </li>
                             <li class="list-group-item"><a href="https://seriouswill.github.io/githubsearcher/"> GitHub Scraper made in JS and jQuery</a></li>
                             <li class="list-group-item"><a href="https://seriouswill.github.io/exploder/">Exploding fun</a></li>
+                            
+                            <li class="list-group-item"><a href="https://keen-engelbart-a25a7c.netlify.app/">Movie searcher!</a></li>
                         </ul>
                         <h4 class="mb-3">Pygame</h4>
                         <strong>In the python front end module Pygame</strong> I have developed <a>a series of
