2nd attempt at netlify form

--- a/contact.html
+++ b/contact.html
@@ -42,26 +42,14 @@
             <h3 class="m-3">Contact Me</h3>
             <div class="card">
                 <div class="card-body">
-                    <form name="contact" method="POST" data-netlify="true">
-                        <p>
-                          <label>Your Name: <input type="text" name="name" /></label>   
-                        </p>
-                        <p>
-                          <label>Your Email: <input type="email" name="email" /></label>
-                        </p>
-                        <p>
-                          <label>Your Role: <select name="role[]" multiple>
-                            <option value="leader">Leader</option>
-                            <option value="follower">Follower</option>
-                          </select></label>
-                        </p>
-                        <p>
-                          <label>Message: <textarea name="message"></textarea></label>
-                        </p>
-                        <p>
-                          <button type="submit">Send</button>
-                        </p>
-                      </form>
+
+                    <h4 class=" mb-3">Contact</h4>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><strong>Work Email:</strong> william.o'connell@wearecodenation.com
+                        </li>
+                        <li class="list-group-item"><strong>Email:</strong> williamjamesoc@gmail.com</li>
+                        <li class="list-group-item"><strong>Mobile:</strong> 07825481140</li>
+                    </ul>
                 </div>
             </div>
 
@@ -70,17 +58,26 @@
     <div class="col">
         <div class="card">
             <h3 class="m-3">Send me a message!</h3>
-            <div class="card">
-                <div class="card-body">
-                    <form action=”mailto:williamjamesoc@gmail.com” method=”POST” enctype=”multipart/form-data”
-                        name=”EmailForm”>
-                        <strong>Name:</strong><input class="list-group-item" type=”text” size=”19″ name=”ContactName”>
-                        <strong>Message:</strong><textarea class="list-group-item" name=”ContactCommentt” rows=”6″
-                            cols=”20″></textarea>
-                        <!-- <input class="list-group-item" type=”submit” value=”Submit”> -->
-                        <button class="list-group-item" type="submit" value="Submit">Send</button>
-
-                    </form>
+            <form name="contact" class="card-body" method="POST" data-netlify="true">
+                <p>
+                  <label><strong>Your Name: </strong><input type="text" name="name" /></label>   
+                </p>
+                <p>
+                  <label><strong>Your Email: </strong><input type="email" name="email" /></label>
+                </p>
+                <p>
+                  <label><strong>Your Role: </strong><select name="role[]" multiple>
+                    <option value="leader">Leader</option>
+                    <option value="follower">Follower</option>
+                  </select></label>
+                </p>
+                <p>
+                  <label><strong>Message: </strong><textarea name="message"></textarea></label>
+                </p>
+                <p>
+                  <button type="submit">Send</button>
+                </p>
+              </form>
                 </div>
             </div>
 
