--- a/games.html
+++ b/games.html
@@ -15,23 +15,12 @@
 </head>
 
 <body>
-    <div class="container mt-3">
-        <div class="card">
-            <div class="container my-3">
-                <div class="col mt-3">
-
-
-                    <h1>Will's Portfolio</h1>
-                    <p class="lead">Enjoys Development and Disc Golf!</p>
-                    <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
-                        Follow @SeriousWill</a>
-                </div>
-            </div>
-
-        </div>
+    <div class="container  my-5">
+        <h1>Will's Portfolio</h1>
+        <p class="lead">Enjoys Development and Disc Golf!</p>
     </div>
 
-    <div class="container mt-3">
+    <div class="container">
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
@@ -58,9 +47,9 @@
         <div class="row">
             <div class="col">
                 <div class="card">
-                    <h3 class="m-3">My Background</h3>
+                    <h3 class="m-3">Games</h3>
                     <div class="card-body">
-                        <h4 class="mb-3">Theatre</h4>
+                        <h4 class="mb-3">Whackamole</h4>
                         <p>I am a <strong>Classically Trained Actor</strong>, beginning in 2011, and worked in the
                             industry for over 10 years. I had
                             always had a passion for computers though so during lockdown v.1 I decided to take the
@@ -97,36 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
-                    <h3 class="m-3">Interests</h3>
-                    <div class="card">
-                        <div class="card-body">
-
-                            <h4 class=" mb-3">Disc Golf</h4>
-                            <div><strong>Disc Golf</strong></div>
-                            <p class="mb-3">Disc golf is a great and easy sport for those of you who just would like to
-                                disguise gentle exercise with a minor competitive element.The course is always OPEN and
-                                FREE to use for everyone. <a href="https://manchesterdiscgolf.co.uk/">The café
-                                    offers disc rental</a> or bring your own discs, we have a
-                                limited stock for sale. It was the first permanent 18-hole course in North West England.
-
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class=" mb-3">Death Metal</h4>
-                            <div><strong>from Hardcore to Djent and everything in between</strong></div>
-                            <p class="mb-3">I have been a metal head since I was a teenager and I still love the genre,
-                                the comunity and the scene. You can follow my <a
-                                    href="https://open.spotify.com/user/u91uabr18k7qzzwev595d217n?si=ebde70692caa4dc2">Spotify
-                                    playlists here</a>!</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
 
         </div>
     </div>
