--- a/writing.html
+++ b/writing.html
@@ -15,11 +15,20 @@
 </head>
 
 <body>
-    <div class="container  my-5">
-        <h1>Will's Writing</h1>
-        <p class="lead">From Cats to Camus!</p>
-        <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
-            Follow @SeriousWill</a>
+    <div class="container mt-3">
+        <div class="card">
+            <div class="container my-3">
+                <div class="col mt-3">
+
+
+                    <h1>Will's Portfolio</h1>
+                    <p class="lead">Enjoys Development and Disc Golf!</p>
+                    <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
+                        Follow @SeriousWill</a>
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <div class="container">
