--- a/link.html
+++ b/link.html
@@ -16,7 +16,21 @@
 </head>
 
 <body>
+    <div class="container mt-3">
+        <div class="card">
+            <div class="container my-3">
+                <div class="col mt-3">
 
+
+                    <h1>Will's Portfolio</h1>
+                    <p class="lead">Enjoys Development and Disc Golf!</p>
+                    <a class="twitter-follow-button" href="https://twitter.com/SeriousWill" data-size="large">
+                        Follow @SeriousWill</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
     <div class="container mt-3">
         <nav>
             <ul class="nav nav-pills ">
