--- a/writing.html
+++ b/writing.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container mt-3">
         <nav>
             <ul class="nav nav-pills ">
                 <li class="nav-item">
