added mario link

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                         <ul class="list-group list-group-flush">
                             
                             <li class="list-group-item"><a href="https://keen-engelbart-a25a7c.netlify.app/">Movie Searcher!</a> </li>
+                            <li class="list-group-item"><a href="https://seriouswill.github.io/mario/">Mario Copy!</a> </li>
                             <li class="list-group-item"><a href="./games/game.html">Text-Based Adventure game!</a> </li>
                             <li class="list-group-item"><a href="https://seriouswill.github.io/githubsearcher/"> GitHub Scraper made in JS and jQuery</a></li>
                             <li class="list-group-item"><a href="https://seriouswill.github.io/exploder/">Exploding fun</a></li>
