--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                         <p>I began my life as a beginner developer learning <strong>javaScript</strong>, and even though
                             I have to code in Python daily, I don't let up on my Javascript skills.</p>
                         <ul class="list-group list-group-flush">
-                            
+                            <li class="list-group-item"><a href="https://frosty-haibt-72e97d.netlify.app/">Dice Game!</a> </li>
+                            <li class="list-group-item"><a href="https://nervous-bohr-d1f8b0.netlify.app/">Drumkit!</a> </li>
                             <li class="list-group-item"><a href="https://keen-engelbart-a25a7c.netlify.app/">Movie Searcher!</a> </li>
                             <li class="list-group-item"><a href="https://seriouswill.github.io/mario/">Mario Copy!</a> </li>
                             <li class="list-group-item"><a href="./games/game.html">Text-Based Adventure game!</a> </li>
