added my cyberPet

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                         <p>I began my life as a beginner developer learning <strong>javaScript</strong>, and even though
                             I have to code in Python daily, I don't let up on my Javascript skills.</p>
                         <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><a href="https://elastic-lamarr-06215f.netlify.app/">Cyber Pet!</a> </li>
                             <li class="list-group-item"><a href="https://frosty-haibt-72e97d.netlify.app/">Dice Game!</a> </li>
                             <li class="list-group-item"><a href="https://nervous-bohr-d1f8b0.netlify.app/">Drumkit!</a> </li>
                             <li class="list-group-item"><a href="https://keen-engelbart-a25a7c.netlify.app/">Movie Searcher!</a> </li>
